--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 PORT=
 
+ACCESS_TOKEN_SECRET=
+REFRESH_TOKEN_SECRET=
+ACCESS_TOKEN_EXPIRES_IN=
+REFRESH_TOKEN_EXPIRES_IN=
+
 DATABASE_HOST=
 DATABASE_PORT=
 DATABASE_USERNAME=
