--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,21 @@
 PORT=
 
+
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
 ACCESS_TOKEN_EXPIRES_IN=
 REFRESH_TOKEN_EXPIRES_IN=
+
 
 DATABASE_HOST=
 DATABASE_PORT=
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
 DATABASE_NAME=
+
+
+API_DOCS_USERNAME=
+API_DOCS_PASSWORD=
 
 
 REDIS_PORT=
