--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,13 @@ REDIS_PORT=
 REDIS_HOST=
 
 
-CLD_CLOUD_NAME = 
-CLD_API_KEY = 
-CLD_API_SECRET = 
+CLD_CLOUD_NAME= 
+CLD_API_KEY= 
+CLD_API_SECRET= 
+
+
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
+EMAIL_FROM=
