--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.0",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.3",
+    "nodemailer-express-handlebars": "^7.0.0",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
     "redis": "^5.0.1",
