feat: config socket

--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "pg-hstore": "^2.3.4",
     "redis": "^5.0.1",
     "sequelize": "^6.37.7",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "swp391-be": "file:"
