fix: fix format

--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "socket.io-client": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "swp391-be": "file:",
-    "xlsx": "^0.18.5"
+    "swp391-be": "file:"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
